diagnostic/main/default/objects/JobResultEvent__e/JobResultEvent__e.object-meta.xml
<CustomObject>
    <label>JobResultEvent</label>
    <pluralLabel>JobResultEvents</pluralLabel>
</CustomObject>