diagnostic/main/default/objects/JobResultEvent__e/fields/Job_Action__c.field-meta.xml
<CustomField>
    <fullName>Job_Action__c</fullName>
    <label>Job Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>