diagnostic/main/default/objects/JobResultEvent__e/fields/Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Completed</label>
    <type>Checkbox</type>
</CustomField>