diagnostic/main/default/objects/JobResultEvent__e/fields/Job_Message__c.field-meta.xml
<CustomField>
    <fullName>Job_Message__c</fullName>
    <label>Job Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>