diagnostic/main/default/objects/JobResultEvent__e/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>