diagnostic/main/default/objects/JobResultEvent__e/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>